--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
         "browser-sync": "^2.26.13",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^7.0",
+        "eslint": "^7.5.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-loader": "^4.0.2",
+        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-vue": "^7.1.0",
         "import-glob-loader": "^1.1.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
