--- a/package.json
+++ b/package.json
@@ -28,6 +28,14 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
+        "stylelint": "^13.7.2",
+        "stylelint-config-prettier": "^8.0.2",
+        "stylelint-config-recess-order": "^2.3.0",
+        "stylelint-config-standard": "^20.0.0",
+        "stylelint-order": "^4.1.0",
+        "stylelint-prettier": "^1.1.2",
+        "stylelint-scss": "^3.18.0",
+        "stylelint-webpack-plugin": "^2.1.1",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     }
