--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
+        "purify-css": "^1.2.5",
+        "purifycss-webpack": "^0.7.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
