--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,13 @@ indent_style = space
 indent_size = 3
 trim_trailing_whitespace = true
 
+[*.php]
+indent_size = 4
+
+[*.blade.php]
+indent_size = 3
+
+
 [*.md]
 trim_trailing_whitespace = false
 
