--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,15 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/js/app.js.map": "/js/app.js.map",
-    "/css/app.css.map": "/css/app.css.map"
+    "/css/app.css.map": "/css/app.css.map",
+    "/js/app.064122e9a6dd3d4887c3.hot-update.js": "/js/app.064122e9a6dd3d4887c3.hot-update.js",
+    "/js/app.064122e9a6dd3d4887c3.hot-update.js.map": "/js/app.064122e9a6dd3d4887c3.hot-update.js.map",
+    "/js/app.a775f7c8883e0fef63dc.hot-update.js": "/js/app.a775f7c8883e0fef63dc.hot-update.js",
+    "/js/app.a775f7c8883e0fef63dc.hot-update.js.map": "/js/app.a775f7c8883e0fef63dc.hot-update.js.map",
+    "/js/app.376aaaa322a5751e1cfe.hot-update.js": "/js/app.376aaaa322a5751e1cfe.hot-update.js",
+    "/js/app.376aaaa322a5751e1cfe.hot-update.js.map": "/js/app.376aaaa322a5751e1cfe.hot-update.js.map",
+    "/js/app.021a817f7efca262fd65.hot-update.js": "/js/app.021a817f7efca262fd65.hot-update.js",
+    "/js/app.021a817f7efca262fd65.hot-update.js.map": "/js/app.021a817f7efca262fd65.hot-update.js.map",
+    "/js/app.8493013236d4e4cf6053.hot-update.js": "/js/app.8493013236d4e4cf6053.hot-update.js",
+    "/js/app.8493013236d4e4cf6053.hot-update.js.map": "/js/app.8493013236d4e4cf6053.hot-update.js.map"
 }
