Conding / 仕事詳細 / リンクの修正

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -12,5 +12,9 @@
     "/js/app.021a817f7efca262fd65.hot-update.js": "/js/app.021a817f7efca262fd65.hot-update.js",
     "/js/app.021a817f7efca262fd65.hot-update.js.map": "/js/app.021a817f7efca262fd65.hot-update.js.map",
     "/js/app.8493013236d4e4cf6053.hot-update.js": "/js/app.8493013236d4e4cf6053.hot-update.js",
-    "/js/app.8493013236d4e4cf6053.hot-update.js.map": "/js/app.8493013236d4e4cf6053.hot-update.js.map"
+    "/js/app.8493013236d4e4cf6053.hot-update.js.map": "/js/app.8493013236d4e4cf6053.hot-update.js.map",
+    "/js/app.a37cde1c443f21ec004b.hot-update.js": "/js/app.a37cde1c443f21ec004b.hot-update.js",
+    "/js/app.a37cde1c443f21ec004b.hot-update.js.map": "/js/app.a37cde1c443f21ec004b.hot-update.js.map",
+    "/js/app.981fd5626fc991ad409e.hot-update.js": "/js/app.981fd5626fc991ad409e.hot-update.js",
+    "/js/app.981fd5626fc991ad409e.hot-update.js.map": "/js/app.981fd5626fc991ad409e.hot-update.js.map"
 }
