Vue / パブリックメッセージの修正（自分の仕事に着色）

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -16,5 +16,49 @@
     "/js/app.a37cde1c443f21ec004b.hot-update.js": "/js/app.a37cde1c443f21ec004b.hot-update.js",
     "/js/app.a37cde1c443f21ec004b.hot-update.js.map": "/js/app.a37cde1c443f21ec004b.hot-update.js.map",
     "/js/app.981fd5626fc991ad409e.hot-update.js": "/js/app.981fd5626fc991ad409e.hot-update.js",
-    "/js/app.981fd5626fc991ad409e.hot-update.js.map": "/js/app.981fd5626fc991ad409e.hot-update.js.map"
+    "/js/app.981fd5626fc991ad409e.hot-update.js.map": "/js/app.981fd5626fc991ad409e.hot-update.js.map",
+    "/js/app.be72678f24d114db271e.hot-update.js": "/js/app.be72678f24d114db271e.hot-update.js",
+    "/js/app.be72678f24d114db271e.hot-update.js.map": "/js/app.be72678f24d114db271e.hot-update.js.map",
+    "/js/app.6f8254e60acbfe9c4450.hot-update.js": "/js/app.6f8254e60acbfe9c4450.hot-update.js",
+    "/js/app.6f8254e60acbfe9c4450.hot-update.js.map": "/js/app.6f8254e60acbfe9c4450.hot-update.js.map",
+    "/js/app.99929a6824e87688bd08.hot-update.js": "/js/app.99929a6824e87688bd08.hot-update.js",
+    "/js/app.99929a6824e87688bd08.hot-update.js.map": "/js/app.99929a6824e87688bd08.hot-update.js.map",
+    "/js/app.450759cdc61c98bf13ff.hot-update.js": "/js/app.450759cdc61c98bf13ff.hot-update.js",
+    "/js/app.450759cdc61c98bf13ff.hot-update.js.map": "/js/app.450759cdc61c98bf13ff.hot-update.js.map",
+    "/js/app.83d242d7be3dd36c174a.hot-update.js": "/js/app.83d242d7be3dd36c174a.hot-update.js",
+    "/js/app.83d242d7be3dd36c174a.hot-update.js.map": "/js/app.83d242d7be3dd36c174a.hot-update.js.map",
+    "/js/app.3cdc5111ca44b955c704.hot-update.js": "/js/app.3cdc5111ca44b955c704.hot-update.js",
+    "/js/app.3cdc5111ca44b955c704.hot-update.js.map": "/js/app.3cdc5111ca44b955c704.hot-update.js.map",
+    "/js/app.a1a0686200971d7ed793.hot-update.js": "/js/app.a1a0686200971d7ed793.hot-update.js",
+    "/js/app.a1a0686200971d7ed793.hot-update.js.map": "/js/app.a1a0686200971d7ed793.hot-update.js.map",
+    "/js/app.d2501113490995457ddd.hot-update.js": "/js/app.d2501113490995457ddd.hot-update.js",
+    "/js/app.d2501113490995457ddd.hot-update.js.map": "/js/app.d2501113490995457ddd.hot-update.js.map",
+    "/js/app.2b1fbdfdf366c9ae1932.hot-update.js": "/js/app.2b1fbdfdf366c9ae1932.hot-update.js",
+    "/js/app.2b1fbdfdf366c9ae1932.hot-update.js.map": "/js/app.2b1fbdfdf366c9ae1932.hot-update.js.map",
+    "/js/app.e14748634f269addb03a.hot-update.js": "/js/app.e14748634f269addb03a.hot-update.js",
+    "/js/app.e14748634f269addb03a.hot-update.js.map": "/js/app.e14748634f269addb03a.hot-update.js.map",
+    "/js/app.7ef1c91e804fd64d85a7.hot-update.js": "/js/app.7ef1c91e804fd64d85a7.hot-update.js",
+    "/js/app.7ef1c91e804fd64d85a7.hot-update.js.map": "/js/app.7ef1c91e804fd64d85a7.hot-update.js.map",
+    "/js/app.5a3df4fa2b0114ef5ed2.hot-update.js": "/js/app.5a3df4fa2b0114ef5ed2.hot-update.js",
+    "/js/app.5a3df4fa2b0114ef5ed2.hot-update.js.map": "/js/app.5a3df4fa2b0114ef5ed2.hot-update.js.map",
+    "/js/app.c6cff8885c92ba419dda.hot-update.js": "/js/app.c6cff8885c92ba419dda.hot-update.js",
+    "/js/app.c6cff8885c92ba419dda.hot-update.js.map": "/js/app.c6cff8885c92ba419dda.hot-update.js.map",
+    "/js/app.bf85a059739c52f8af54.hot-update.js": "/js/app.bf85a059739c52f8af54.hot-update.js",
+    "/js/app.bf85a059739c52f8af54.hot-update.js.map": "/js/app.bf85a059739c52f8af54.hot-update.js.map",
+    "/js/app.b3d3b195f2ba5bff495c.hot-update.js": "/js/app.b3d3b195f2ba5bff495c.hot-update.js",
+    "/js/app.b3d3b195f2ba5bff495c.hot-update.js.map": "/js/app.b3d3b195f2ba5bff495c.hot-update.js.map",
+    "/js/app.6caef5f769aaaefb9e85.hot-update.js": "/js/app.6caef5f769aaaefb9e85.hot-update.js",
+    "/js/app.6caef5f769aaaefb9e85.hot-update.js.map": "/js/app.6caef5f769aaaefb9e85.hot-update.js.map",
+    "/js/app.0142b712ec930f669d27.hot-update.js": "/js/app.0142b712ec930f669d27.hot-update.js",
+    "/js/app.0142b712ec930f669d27.hot-update.js.map": "/js/app.0142b712ec930f669d27.hot-update.js.map",
+    "/js/app.83fcc6c0f824638e1e8a.hot-update.js": "/js/app.83fcc6c0f824638e1e8a.hot-update.js",
+    "/js/app.83fcc6c0f824638e1e8a.hot-update.js.map": "/js/app.83fcc6c0f824638e1e8a.hot-update.js.map",
+    "/js/app.bf399851f3203b59732a.hot-update.js": "/js/app.bf399851f3203b59732a.hot-update.js",
+    "/js/app.bf399851f3203b59732a.hot-update.js.map": "/js/app.bf399851f3203b59732a.hot-update.js.map",
+    "/js/app.e04ace1aad9a4e952475.hot-update.js": "/js/app.e04ace1aad9a4e952475.hot-update.js",
+    "/js/app.e04ace1aad9a4e952475.hot-update.js.map": "/js/app.e04ace1aad9a4e952475.hot-update.js.map",
+    "/js/app.155f0b216c3f829cc4e6.hot-update.js": "/js/app.155f0b216c3f829cc4e6.hot-update.js",
+    "/js/app.155f0b216c3f829cc4e6.hot-update.js.map": "/js/app.155f0b216c3f829cc4e6.hot-update.js.map",
+    "/js/app.2d583867e35f67ae1402.hot-update.js": "/js/app.2d583867e35f67ae1402.hot-update.js",
+    "/js/app.2d583867e35f67ae1402.hot-update.js.map": "/js/app.2d583867e35f67ae1402.hot-update.js.map"
 }
