Vue / パブリックメッセージリストの修正

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -60,5 +60,7 @@
     "/js/app.155f0b216c3f829cc4e6.hot-update.js": "/js/app.155f0b216c3f829cc4e6.hot-update.js",
     "/js/app.155f0b216c3f829cc4e6.hot-update.js.map": "/js/app.155f0b216c3f829cc4e6.hot-update.js.map",
     "/js/app.2d583867e35f67ae1402.hot-update.js": "/js/app.2d583867e35f67ae1402.hot-update.js",
-    "/js/app.2d583867e35f67ae1402.hot-update.js.map": "/js/app.2d583867e35f67ae1402.hot-update.js.map"
+    "/js/app.2d583867e35f67ae1402.hot-update.js.map": "/js/app.2d583867e35f67ae1402.hot-update.js.map",
+    "/js/app.9093bdd8c88a4f6a2cec.hot-update.js": "/js/app.9093bdd8c88a4f6a2cec.hot-update.js",
+    "/js/app.9093bdd8c88a4f6a2cec.hot-update.js.map": "/js/app.9093bdd8c88a4f6a2cec.hot-update.js.map"
 }
