Coding / DM / ヘッダー（仕事・氏名等記述部分）の修正

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -62,5 +62,21 @@
     "/js/app.2d583867e35f67ae1402.hot-update.js": "/js/app.2d583867e35f67ae1402.hot-update.js",
     "/js/app.2d583867e35f67ae1402.hot-update.js.map": "/js/app.2d583867e35f67ae1402.hot-update.js.map",
     "/js/app.9093bdd8c88a4f6a2cec.hot-update.js": "/js/app.9093bdd8c88a4f6a2cec.hot-update.js",
-    "/js/app.9093bdd8c88a4f6a2cec.hot-update.js.map": "/js/app.9093bdd8c88a4f6a2cec.hot-update.js.map"
+    "/js/app.9093bdd8c88a4f6a2cec.hot-update.js.map": "/js/app.9093bdd8c88a4f6a2cec.hot-update.js.map",
+    "/js/app.69ec89b6222af6ff05b1.hot-update.js": "/js/app.69ec89b6222af6ff05b1.hot-update.js",
+    "/js/app.69ec89b6222af6ff05b1.hot-update.js.map": "/js/app.69ec89b6222af6ff05b1.hot-update.js.map",
+    "/js/app.ad3be56970916e02a2d1.hot-update.js": "/js/app.ad3be56970916e02a2d1.hot-update.js",
+    "/js/app.ad3be56970916e02a2d1.hot-update.js.map": "/js/app.ad3be56970916e02a2d1.hot-update.js.map",
+    "/js/app.7174711e30490243c257.hot-update.js": "/js/app.7174711e30490243c257.hot-update.js",
+    "/js/app.7174711e30490243c257.hot-update.js.map": "/js/app.7174711e30490243c257.hot-update.js.map",
+    "/js/app.5e3d19fd46901601d1b2.hot-update.js": "/js/app.5e3d19fd46901601d1b2.hot-update.js",
+    "/js/app.5e3d19fd46901601d1b2.hot-update.js.map": "/js/app.5e3d19fd46901601d1b2.hot-update.js.map",
+    "/js/app.1066f36f862997d66204.hot-update.js": "/js/app.1066f36f862997d66204.hot-update.js",
+    "/js/app.1066f36f862997d66204.hot-update.js.map": "/js/app.1066f36f862997d66204.hot-update.js.map",
+    "/js/app.edf7817acc0a50931e6c.hot-update.js": "/js/app.edf7817acc0a50931e6c.hot-update.js",
+    "/js/app.edf7817acc0a50931e6c.hot-update.js.map": "/js/app.edf7817acc0a50931e6c.hot-update.js.map",
+    "/js/app.6a73a50393d3628c6d77.hot-update.js": "/js/app.6a73a50393d3628c6d77.hot-update.js",
+    "/js/app.6a73a50393d3628c6d77.hot-update.js.map": "/js/app.6a73a50393d3628c6d77.hot-update.js.map",
+    "/js/app.212488f78360d2ba6846.hot-update.js": "/js/app.212488f78360d2ba6846.hot-update.js",
+    "/js/app.212488f78360d2ba6846.hot-update.js.map": "/js/app.212488f78360d2ba6846.hot-update.js.map"
 }
