--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -78,5 +78,29 @@
     "/js/app.6a73a50393d3628c6d77.hot-update.js": "/js/app.6a73a50393d3628c6d77.hot-update.js",
     "/js/app.6a73a50393d3628c6d77.hot-update.js.map": "/js/app.6a73a50393d3628c6d77.hot-update.js.map",
     "/js/app.212488f78360d2ba6846.hot-update.js": "/js/app.212488f78360d2ba6846.hot-update.js",
-    "/js/app.212488f78360d2ba6846.hot-update.js.map": "/js/app.212488f78360d2ba6846.hot-update.js.map"
+    "/js/app.212488f78360d2ba6846.hot-update.js.map": "/js/app.212488f78360d2ba6846.hot-update.js.map",
+    "/js/app.61148f541406ca870660.hot-update.js": "/js/app.61148f541406ca870660.hot-update.js",
+    "/js/app.61148f541406ca870660.hot-update.js.map": "/js/app.61148f541406ca870660.hot-update.js.map",
+    "/js/app.d40fcdde380033999fc3.hot-update.js": "/js/app.d40fcdde380033999fc3.hot-update.js",
+    "/js/app.d40fcdde380033999fc3.hot-update.js.map": "/js/app.d40fcdde380033999fc3.hot-update.js.map",
+    "/js/app.75f5410eb4c660a8761d.hot-update.js": "/js/app.75f5410eb4c660a8761d.hot-update.js",
+    "/js/app.75f5410eb4c660a8761d.hot-update.js.map": "/js/app.75f5410eb4c660a8761d.hot-update.js.map",
+    "/js/app.acf56a82106d772dce72.hot-update.js": "/js/app.acf56a82106d772dce72.hot-update.js",
+    "/js/app.acf56a82106d772dce72.hot-update.js.map": "/js/app.acf56a82106d772dce72.hot-update.js.map",
+    "/js/app.ccb392eb3a3a361b1da4.hot-update.js": "/js/app.ccb392eb3a3a361b1da4.hot-update.js",
+    "/js/app.ccb392eb3a3a361b1da4.hot-update.js.map": "/js/app.ccb392eb3a3a361b1da4.hot-update.js.map",
+    "/js/app.4320d8072e6692bde643.hot-update.js": "/js/app.4320d8072e6692bde643.hot-update.js",
+    "/js/app.4320d8072e6692bde643.hot-update.js.map": "/js/app.4320d8072e6692bde643.hot-update.js.map",
+    "/js/app.21d0c6755a7e03a0ab0c.hot-update.js": "/js/app.21d0c6755a7e03a0ab0c.hot-update.js",
+    "/js/app.21d0c6755a7e03a0ab0c.hot-update.js.map": "/js/app.21d0c6755a7e03a0ab0c.hot-update.js.map",
+    "/js/app.5c507c788e85ef968c73.hot-update.js": "/js/app.5c507c788e85ef968c73.hot-update.js",
+    "/js/app.5c507c788e85ef968c73.hot-update.js.map": "/js/app.5c507c788e85ef968c73.hot-update.js.map",
+    "/js/app.369a225b6821b46f506b.hot-update.js": "/js/app.369a225b6821b46f506b.hot-update.js",
+    "/js/app.369a225b6821b46f506b.hot-update.js.map": "/js/app.369a225b6821b46f506b.hot-update.js.map",
+    "/js/app.e8aaf647dddf5640ef17.hot-update.js": "/js/app.e8aaf647dddf5640ef17.hot-update.js",
+    "/js/app.e8aaf647dddf5640ef17.hot-update.js.map": "/js/app.e8aaf647dddf5640ef17.hot-update.js.map",
+    "/js/app.cc738d41572a10b39ee9.hot-update.js": "/js/app.cc738d41572a10b39ee9.hot-update.js",
+    "/js/app.cc738d41572a10b39ee9.hot-update.js.map": "/js/app.cc738d41572a10b39ee9.hot-update.js.map",
+    "/js/app.e37f37db8fae3af8c593.hot-update.js": "/js/app.e37f37db8fae3af8c593.hot-update.js",
+    "/js/app.e37f37db8fae3af8c593.hot-update.js.map": "/js/app.e37f37db8fae3af8c593.hot-update.js.map"
 }
