Coding / 通知バッジの修正

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -102,5 +102,45 @@
     "/js/app.cc738d41572a10b39ee9.hot-update.js": "/js/app.cc738d41572a10b39ee9.hot-update.js",
     "/js/app.cc738d41572a10b39ee9.hot-update.js.map": "/js/app.cc738d41572a10b39ee9.hot-update.js.map",
     "/js/app.e37f37db8fae3af8c593.hot-update.js": "/js/app.e37f37db8fae3af8c593.hot-update.js",
-    "/js/app.e37f37db8fae3af8c593.hot-update.js.map": "/js/app.e37f37db8fae3af8c593.hot-update.js.map"
+    "/js/app.e37f37db8fae3af8c593.hot-update.js.map": "/js/app.e37f37db8fae3af8c593.hot-update.js.map",
+    "/js/app.686bd0ddd9b9d36192cb.hot-update.js": "/js/app.686bd0ddd9b9d36192cb.hot-update.js",
+    "/js/app.686bd0ddd9b9d36192cb.hot-update.js.map": "/js/app.686bd0ddd9b9d36192cb.hot-update.js.map",
+    "/js/app.fcd036de02526a0b6cf9.hot-update.js": "/js/app.fcd036de02526a0b6cf9.hot-update.js",
+    "/js/app.fcd036de02526a0b6cf9.hot-update.js.map": "/js/app.fcd036de02526a0b6cf9.hot-update.js.map",
+    "/js/app.cb93f7906c1836fa8a96.hot-update.js": "/js/app.cb93f7906c1836fa8a96.hot-update.js",
+    "/js/app.cb93f7906c1836fa8a96.hot-update.js.map": "/js/app.cb93f7906c1836fa8a96.hot-update.js.map",
+    "/js/app.cacff05cb1f65107b077.hot-update.js": "/js/app.cacff05cb1f65107b077.hot-update.js",
+    "/js/app.cacff05cb1f65107b077.hot-update.js.map": "/js/app.cacff05cb1f65107b077.hot-update.js.map",
+    "/js/app.06847117e456b091d979.hot-update.js": "/js/app.06847117e456b091d979.hot-update.js",
+    "/js/app.06847117e456b091d979.hot-update.js.map": "/js/app.06847117e456b091d979.hot-update.js.map",
+    "/js/app.3ed4c87b6c870de1ad77.hot-update.js": "/js/app.3ed4c87b6c870de1ad77.hot-update.js",
+    "/js/app.3ed4c87b6c870de1ad77.hot-update.js.map": "/js/app.3ed4c87b6c870de1ad77.hot-update.js.map",
+    "/js/app.c43ae2959cb59ee9c128.hot-update.js": "/js/app.c43ae2959cb59ee9c128.hot-update.js",
+    "/js/app.c43ae2959cb59ee9c128.hot-update.js.map": "/js/app.c43ae2959cb59ee9c128.hot-update.js.map",
+    "/js/app.eb1af3b69056ddfcaf58.hot-update.js": "/js/app.eb1af3b69056ddfcaf58.hot-update.js",
+    "/js/app.eb1af3b69056ddfcaf58.hot-update.js.map": "/js/app.eb1af3b69056ddfcaf58.hot-update.js.map",
+    "/js/app.03b0478a3e5a78a36d04.hot-update.js": "/js/app.03b0478a3e5a78a36d04.hot-update.js",
+    "/js/app.03b0478a3e5a78a36d04.hot-update.js.map": "/js/app.03b0478a3e5a78a36d04.hot-update.js.map",
+    "/js/app.b1795977a237fbd4f8bf.hot-update.js": "/js/app.b1795977a237fbd4f8bf.hot-update.js",
+    "/js/app.b1795977a237fbd4f8bf.hot-update.js.map": "/js/app.b1795977a237fbd4f8bf.hot-update.js.map",
+    "/js/app.bea860540a36afeea85e.hot-update.js": "/js/app.bea860540a36afeea85e.hot-update.js",
+    "/js/app.bea860540a36afeea85e.hot-update.js.map": "/js/app.bea860540a36afeea85e.hot-update.js.map",
+    "/js/app.f8181871659ce0599143.hot-update.js": "/js/app.f8181871659ce0599143.hot-update.js",
+    "/js/app.f8181871659ce0599143.hot-update.js.map": "/js/app.f8181871659ce0599143.hot-update.js.map",
+    "/js/app.1943cc662cf887ed1c74.hot-update.js": "/js/app.1943cc662cf887ed1c74.hot-update.js",
+    "/js/app.1943cc662cf887ed1c74.hot-update.js.map": "/js/app.1943cc662cf887ed1c74.hot-update.js.map",
+    "/js/app.3a96ef282bdf2c5cb8e6.hot-update.js": "/js/app.3a96ef282bdf2c5cb8e6.hot-update.js",
+    "/js/app.3a96ef282bdf2c5cb8e6.hot-update.js.map": "/js/app.3a96ef282bdf2c5cb8e6.hot-update.js.map",
+    "/js/app.d4b9abba76411dbdad3a.hot-update.js": "/js/app.d4b9abba76411dbdad3a.hot-update.js",
+    "/js/app.d4b9abba76411dbdad3a.hot-update.js.map": "/js/app.d4b9abba76411dbdad3a.hot-update.js.map",
+    "/js/app.946c19e23350fcd2fee2.hot-update.js": "/js/app.946c19e23350fcd2fee2.hot-update.js",
+    "/js/app.946c19e23350fcd2fee2.hot-update.js.map": "/js/app.946c19e23350fcd2fee2.hot-update.js.map",
+    "/js/app.ec67bad6f243230ca7fa.hot-update.js": "/js/app.ec67bad6f243230ca7fa.hot-update.js",
+    "/js/app.ec67bad6f243230ca7fa.hot-update.js.map": "/js/app.ec67bad6f243230ca7fa.hot-update.js.map",
+    "/js/app.087c615b15fc8404e636.hot-update.js": "/js/app.087c615b15fc8404e636.hot-update.js",
+    "/js/app.087c615b15fc8404e636.hot-update.js.map": "/js/app.087c615b15fc8404e636.hot-update.js.map",
+    "/js/app.b370776d0bb68b0aab52.hot-update.js": "/js/app.b370776d0bb68b0aab52.hot-update.js",
+    "/js/app.b370776d0bb68b0aab52.hot-update.js.map": "/js/app.b370776d0bb68b0aab52.hot-update.js.map",
+    "/js/app.2d87f8c4f2ef7b1702cc.hot-update.js": "/js/app.2d87f8c4f2ef7b1702cc.hot-update.js",
+    "/js/app.2d87f8c4f2ef7b1702cc.hot-update.js.map": "/js/app.2d87f8c4f2ef7b1702cc.hot-update.js.map"
 }
