Laravel / 仕事フォーム / バリデーション

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -142,5 +142,17 @@
     "/js/app.b370776d0bb68b0aab52.hot-update.js": "/js/app.b370776d0bb68b0aab52.hot-update.js",
     "/js/app.b370776d0bb68b0aab52.hot-update.js.map": "/js/app.b370776d0bb68b0aab52.hot-update.js.map",
     "/js/app.2d87f8c4f2ef7b1702cc.hot-update.js": "/js/app.2d87f8c4f2ef7b1702cc.hot-update.js",
-    "/js/app.2d87f8c4f2ef7b1702cc.hot-update.js.map": "/js/app.2d87f8c4f2ef7b1702cc.hot-update.js.map"
+    "/js/app.2d87f8c4f2ef7b1702cc.hot-update.js.map": "/js/app.2d87f8c4f2ef7b1702cc.hot-update.js.map",
+    "/js/app.54a1fc6339632191a1e4.hot-update.js": "/js/app.54a1fc6339632191a1e4.hot-update.js",
+    "/js/app.54a1fc6339632191a1e4.hot-update.js.map": "/js/app.54a1fc6339632191a1e4.hot-update.js.map",
+    "/js/app.dd203f3ab18025d249f5.hot-update.js": "/js/app.dd203f3ab18025d249f5.hot-update.js",
+    "/js/app.dd203f3ab18025d249f5.hot-update.js.map": "/js/app.dd203f3ab18025d249f5.hot-update.js.map",
+    "/js/app.26162468bcef680bd3e5.hot-update.js": "/js/app.26162468bcef680bd3e5.hot-update.js",
+    "/js/app.26162468bcef680bd3e5.hot-update.js.map": "/js/app.26162468bcef680bd3e5.hot-update.js.map",
+    "/js/app.83faef620dfe9b23d298.hot-update.js": "/js/app.83faef620dfe9b23d298.hot-update.js",
+    "/js/app.83faef620dfe9b23d298.hot-update.js.map": "/js/app.83faef620dfe9b23d298.hot-update.js.map",
+    "/js/app.0f2f6851db9cda9708d9.hot-update.js": "/js/app.0f2f6851db9cda9708d9.hot-update.js",
+    "/js/app.0f2f6851db9cda9708d9.hot-update.js.map": "/js/app.0f2f6851db9cda9708d9.hot-update.js.map",
+    "/js/app.2e9fee0f922ee36c4d98.hot-update.js": "/js/app.2e9fee0f922ee36c4d98.hot-update.js",
+    "/js/app.2e9fee0f922ee36c4d98.hot-update.js.map": "/js/app.2e9fee0f922ee36c4d98.hot-update.js.map"
 }
