Laravel / 仕事フォーム / 募集終了欄の修正

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -154,5 +154,7 @@
     "/js/app.0f2f6851db9cda9708d9.hot-update.js": "/js/app.0f2f6851db9cda9708d9.hot-update.js",
     "/js/app.0f2f6851db9cda9708d9.hot-update.js.map": "/js/app.0f2f6851db9cda9708d9.hot-update.js.map",
     "/js/app.2e9fee0f922ee36c4d98.hot-update.js": "/js/app.2e9fee0f922ee36c4d98.hot-update.js",
-    "/js/app.2e9fee0f922ee36c4d98.hot-update.js.map": "/js/app.2e9fee0f922ee36c4d98.hot-update.js.map"
+    "/js/app.2e9fee0f922ee36c4d98.hot-update.js.map": "/js/app.2e9fee0f922ee36c4d98.hot-update.js.map",
+    "/js/app.a025ae2b85627c865de6.hot-update.js": "/js/app.a025ae2b85627c865de6.hot-update.js",
+    "/js/app.a025ae2b85627c865de6.hot-update.js.map": "/js/app.a025ae2b85627c865de6.hot-update.js.map"
 }
