--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -156,5 +156,9 @@
     "/js/app.2e9fee0f922ee36c4d98.hot-update.js": "/js/app.2e9fee0f922ee36c4d98.hot-update.js",
     "/js/app.2e9fee0f922ee36c4d98.hot-update.js.map": "/js/app.2e9fee0f922ee36c4d98.hot-update.js.map",
     "/js/app.a025ae2b85627c865de6.hot-update.js": "/js/app.a025ae2b85627c865de6.hot-update.js",
-    "/js/app.a025ae2b85627c865de6.hot-update.js.map": "/js/app.a025ae2b85627c865de6.hot-update.js.map"
+    "/js/app.a025ae2b85627c865de6.hot-update.js.map": "/js/app.a025ae2b85627c865de6.hot-update.js.map",
+    "/js/app.93ff3dc548fbd7149f61.hot-update.js": "/js/app.93ff3dc548fbd7149f61.hot-update.js",
+    "/js/app.93ff3dc548fbd7149f61.hot-update.js.map": "/js/app.93ff3dc548fbd7149f61.hot-update.js.map",
+    "/js/app.87c4f80b57f7aea434f2.hot-update.js": "/js/app.87c4f80b57f7aea434f2.hot-update.js",
+    "/js/app.87c4f80b57f7aea434f2.hot-update.js.map": "/js/app.87c4f80b57f7aea434f2.hot-update.js.map"
 }
