Coding / エラー画面の実装

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,163 +2,5 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/js/app.js.map": "/js/app.js.map",
-    "/css/app.css.map": "/css/app.css.map",
-    "/js/app.064122e9a6dd3d4887c3.hot-update.js": "/js/app.064122e9a6dd3d4887c3.hot-update.js",
-    "/js/app.064122e9a6dd3d4887c3.hot-update.js.map": "/js/app.064122e9a6dd3d4887c3.hot-update.js.map",
-    "/js/app.a775f7c8883e0fef63dc.hot-update.js": "/js/app.a775f7c8883e0fef63dc.hot-update.js",
-    "/js/app.a775f7c8883e0fef63dc.hot-update.js.map": "/js/app.a775f7c8883e0fef63dc.hot-update.js.map",
-    "/js/app.376aaaa322a5751e1cfe.hot-update.js": "/js/app.376aaaa322a5751e1cfe.hot-update.js",
-    "/js/app.376aaaa322a5751e1cfe.hot-update.js.map": "/js/app.376aaaa322a5751e1cfe.hot-update.js.map",
-    "/js/app.021a817f7efca262fd65.hot-update.js": "/js/app.021a817f7efca262fd65.hot-update.js",
-    "/js/app.021a817f7efca262fd65.hot-update.js.map": "/js/app.021a817f7efca262fd65.hot-update.js.map",
-    "/js/app.8493013236d4e4cf6053.hot-update.js": "/js/app.8493013236d4e4cf6053.hot-update.js",
-    "/js/app.8493013236d4e4cf6053.hot-update.js.map": "/js/app.8493013236d4e4cf6053.hot-update.js.map",
-    "/js/app.a37cde1c443f21ec004b.hot-update.js": "/js/app.a37cde1c443f21ec004b.hot-update.js",
-    "/js/app.a37cde1c443f21ec004b.hot-update.js.map": "/js/app.a37cde1c443f21ec004b.hot-update.js.map",
-    "/js/app.981fd5626fc991ad409e.hot-update.js": "/js/app.981fd5626fc991ad409e.hot-update.js",
-    "/js/app.981fd5626fc991ad409e.hot-update.js.map": "/js/app.981fd5626fc991ad409e.hot-update.js.map",
-    "/js/app.be72678f24d114db271e.hot-update.js": "/js/app.be72678f24d114db271e.hot-update.js",
-    "/js/app.be72678f24d114db271e.hot-update.js.map": "/js/app.be72678f24d114db271e.hot-update.js.map",
-    "/js/app.6f8254e60acbfe9c4450.hot-update.js": "/js/app.6f8254e60acbfe9c4450.hot-update.js",
-    "/js/app.6f8254e60acbfe9c4450.hot-update.js.map": "/js/app.6f8254e60acbfe9c4450.hot-update.js.map",
-    "/js/app.99929a6824e87688bd08.hot-update.js": "/js/app.99929a6824e87688bd08.hot-update.js",
-    "/js/app.99929a6824e87688bd08.hot-update.js.map": "/js/app.99929a6824e87688bd08.hot-update.js.map",
-    "/js/app.450759cdc61c98bf13ff.hot-update.js": "/js/app.450759cdc61c98bf13ff.hot-update.js",
-    "/js/app.450759cdc61c98bf13ff.hot-update.js.map": "/js/app.450759cdc61c98bf13ff.hot-update.js.map",
-    "/js/app.83d242d7be3dd36c174a.hot-update.js": "/js/app.83d242d7be3dd36c174a.hot-update.js",
-    "/js/app.83d242d7be3dd36c174a.hot-update.js.map": "/js/app.83d242d7be3dd36c174a.hot-update.js.map",
-    "/js/app.3cdc5111ca44b955c704.hot-update.js": "/js/app.3cdc5111ca44b955c704.hot-update.js",
-    "/js/app.3cdc5111ca44b955c704.hot-update.js.map": "/js/app.3cdc5111ca44b955c704.hot-update.js.map",
-    "/js/app.a1a0686200971d7ed793.hot-update.js": "/js/app.a1a0686200971d7ed793.hot-update.js",
-    "/js/app.a1a0686200971d7ed793.hot-update.js.map": "/js/app.a1a0686200971d7ed793.hot-update.js.map",
-    "/js/app.d2501113490995457ddd.hot-update.js": "/js/app.d2501113490995457ddd.hot-update.js",
-    "/js/app.d2501113490995457ddd.hot-update.js.map": "/js/app.d2501113490995457ddd.hot-update.js.map",
-    "/js/app.2b1fbdfdf366c9ae1932.hot-update.js": "/js/app.2b1fbdfdf366c9ae1932.hot-update.js",
-    "/js/app.2b1fbdfdf366c9ae1932.hot-update.js.map": "/js/app.2b1fbdfdf366c9ae1932.hot-update.js.map",
-    "/js/app.e14748634f269addb03a.hot-update.js": "/js/app.e14748634f269addb03a.hot-update.js",
-    "/js/app.e14748634f269addb03a.hot-update.js.map": "/js/app.e14748634f269addb03a.hot-update.js.map",
-    "/js/app.7ef1c91e804fd64d85a7.hot-update.js": "/js/app.7ef1c91e804fd64d85a7.hot-update.js",
-    "/js/app.7ef1c91e804fd64d85a7.hot-update.js.map": "/js/app.7ef1c91e804fd64d85a7.hot-update.js.map",
-    "/js/app.5a3df4fa2b0114ef5ed2.hot-update.js": "/js/app.5a3df4fa2b0114ef5ed2.hot-update.js",
-    "/js/app.5a3df4fa2b0114ef5ed2.hot-update.js.map": "/js/app.5a3df4fa2b0114ef5ed2.hot-update.js.map",
-    "/js/app.c6cff8885c92ba419dda.hot-update.js": "/js/app.c6cff8885c92ba419dda.hot-update.js",
-    "/js/app.c6cff8885c92ba419dda.hot-update.js.map": "/js/app.c6cff8885c92ba419dda.hot-update.js.map",
-    "/js/app.bf85a059739c52f8af54.hot-update.js": "/js/app.bf85a059739c52f8af54.hot-update.js",
-    "/js/app.bf85a059739c52f8af54.hot-update.js.map": "/js/app.bf85a059739c52f8af54.hot-update.js.map",
-    "/js/app.b3d3b195f2ba5bff495c.hot-update.js": "/js/app.b3d3b195f2ba5bff495c.hot-update.js",
-    "/js/app.b3d3b195f2ba5bff495c.hot-update.js.map": "/js/app.b3d3b195f2ba5bff495c.hot-update.js.map",
-    "/js/app.6caef5f769aaaefb9e85.hot-update.js": "/js/app.6caef5f769aaaefb9e85.hot-update.js",
-    "/js/app.6caef5f769aaaefb9e85.hot-update.js.map": "/js/app.6caef5f769aaaefb9e85.hot-update.js.map",
-    "/js/app.0142b712ec930f669d27.hot-update.js": "/js/app.0142b712ec930f669d27.hot-update.js",
-    "/js/app.0142b712ec930f669d27.hot-update.js.map": "/js/app.0142b712ec930f669d27.hot-update.js.map",
-    "/js/app.83fcc6c0f824638e1e8a.hot-update.js": "/js/app.83fcc6c0f824638e1e8a.hot-update.js",
-    "/js/app.83fcc6c0f824638e1e8a.hot-update.js.map": "/js/app.83fcc6c0f824638e1e8a.hot-update.js.map",
-    "/js/app.bf399851f3203b59732a.hot-update.js": "/js/app.bf399851f3203b59732a.hot-update.js",
-    "/js/app.bf399851f3203b59732a.hot-update.js.map": "/js/app.bf399851f3203b59732a.hot-update.js.map",
-    "/js/app.e04ace1aad9a4e952475.hot-update.js": "/js/app.e04ace1aad9a4e952475.hot-update.js",
-    "/js/app.e04ace1aad9a4e952475.hot-update.js.map": "/js/app.e04ace1aad9a4e952475.hot-update.js.map",
-    "/js/app.155f0b216c3f829cc4e6.hot-update.js": "/js/app.155f0b216c3f829cc4e6.hot-update.js",
-    "/js/app.155f0b216c3f829cc4e6.hot-update.js.map": "/js/app.155f0b216c3f829cc4e6.hot-update.js.map",
-    "/js/app.2d583867e35f67ae1402.hot-update.js": "/js/app.2d583867e35f67ae1402.hot-update.js",
-    "/js/app.2d583867e35f67ae1402.hot-update.js.map": "/js/app.2d583867e35f67ae1402.hot-update.js.map",
-    "/js/app.9093bdd8c88a4f6a2cec.hot-update.js": "/js/app.9093bdd8c88a4f6a2cec.hot-update.js",
-    "/js/app.9093bdd8c88a4f6a2cec.hot-update.js.map": "/js/app.9093bdd8c88a4f6a2cec.hot-update.js.map",
-    "/js/app.69ec89b6222af6ff05b1.hot-update.js": "/js/app.69ec89b6222af6ff05b1.hot-update.js",
-    "/js/app.69ec89b6222af6ff05b1.hot-update.js.map": "/js/app.69ec89b6222af6ff05b1.hot-update.js.map",
-    "/js/app.ad3be56970916e02a2d1.hot-update.js": "/js/app.ad3be56970916e02a2d1.hot-update.js",
-    "/js/app.ad3be56970916e02a2d1.hot-update.js.map": "/js/app.ad3be56970916e02a2d1.hot-update.js.map",
-    "/js/app.7174711e30490243c257.hot-update.js": "/js/app.7174711e30490243c257.hot-update.js",
-    "/js/app.7174711e30490243c257.hot-update.js.map": "/js/app.7174711e30490243c257.hot-update.js.map",
-    "/js/app.5e3d19fd46901601d1b2.hot-update.js": "/js/app.5e3d19fd46901601d1b2.hot-update.js",
-    "/js/app.5e3d19fd46901601d1b2.hot-update.js.map": "/js/app.5e3d19fd46901601d1b2.hot-update.js.map",
-    "/js/app.1066f36f862997d66204.hot-update.js": "/js/app.1066f36f862997d66204.hot-update.js",
-    "/js/app.1066f36f862997d66204.hot-update.js.map": "/js/app.1066f36f862997d66204.hot-update.js.map",
-    "/js/app.edf7817acc0a50931e6c.hot-update.js": "/js/app.edf7817acc0a50931e6c.hot-update.js",
-    "/js/app.edf7817acc0a50931e6c.hot-update.js.map": "/js/app.edf7817acc0a50931e6c.hot-update.js.map",
-    "/js/app.6a73a50393d3628c6d77.hot-update.js": "/js/app.6a73a50393d3628c6d77.hot-update.js",
-    "/js/app.6a73a50393d3628c6d77.hot-update.js.map": "/js/app.6a73a50393d3628c6d77.hot-update.js.map",
-    "/js/app.212488f78360d2ba6846.hot-update.js": "/js/app.212488f78360d2ba6846.hot-update.js",
-    "/js/app.212488f78360d2ba6846.hot-update.js.map": "/js/app.212488f78360d2ba6846.hot-update.js.map",
-    "/js/app.61148f541406ca870660.hot-update.js": "/js/app.61148f541406ca870660.hot-update.js",
-    "/js/app.61148f541406ca870660.hot-update.js.map": "/js/app.61148f541406ca870660.hot-update.js.map",
-    "/js/app.d40fcdde380033999fc3.hot-update.js": "/js/app.d40fcdde380033999fc3.hot-update.js",
-    "/js/app.d40fcdde380033999fc3.hot-update.js.map": "/js/app.d40fcdde380033999fc3.hot-update.js.map",
-    "/js/app.75f5410eb4c660a8761d.hot-update.js": "/js/app.75f5410eb4c660a8761d.hot-update.js",
-    "/js/app.75f5410eb4c660a8761d.hot-update.js.map": "/js/app.75f5410eb4c660a8761d.hot-update.js.map",
-    "/js/app.acf56a82106d772dce72.hot-update.js": "/js/app.acf56a82106d772dce72.hot-update.js",
-    "/js/app.acf56a82106d772dce72.hot-update.js.map": "/js/app.acf56a82106d772dce72.hot-update.js.map",
-    "/js/app.ccb392eb3a3a361b1da4.hot-update.js": "/js/app.ccb392eb3a3a361b1da4.hot-update.js",
-    "/js/app.ccb392eb3a3a361b1da4.hot-update.js.map": "/js/app.ccb392eb3a3a361b1da4.hot-update.js.map",
-    "/js/app.4320d8072e6692bde643.hot-update.js": "/js/app.4320d8072e6692bde643.hot-update.js",
-    "/js/app.4320d8072e6692bde643.hot-update.js.map": "/js/app.4320d8072e6692bde643.hot-update.js.map",
-    "/js/app.21d0c6755a7e03a0ab0c.hot-update.js": "/js/app.21d0c6755a7e03a0ab0c.hot-update.js",
-    "/js/app.21d0c6755a7e03a0ab0c.hot-update.js.map": "/js/app.21d0c6755a7e03a0ab0c.hot-update.js.map",
-    "/js/app.5c507c788e85ef968c73.hot-update.js": "/js/app.5c507c788e85ef968c73.hot-update.js",
-    "/js/app.5c507c788e85ef968c73.hot-update.js.map": "/js/app.5c507c788e85ef968c73.hot-update.js.map",
-    "/js/app.369a225b6821b46f506b.hot-update.js": "/js/app.369a225b6821b46f506b.hot-update.js",
-    "/js/app.369a225b6821b46f506b.hot-update.js.map": "/js/app.369a225b6821b46f506b.hot-update.js.map",
-    "/js/app.e8aaf647dddf5640ef17.hot-update.js": "/js/app.e8aaf647dddf5640ef17.hot-update.js",
-    "/js/app.e8aaf647dddf5640ef17.hot-update.js.map": "/js/app.e8aaf647dddf5640ef17.hot-update.js.map",
-    "/js/app.cc738d41572a10b39ee9.hot-update.js": "/js/app.cc738d41572a10b39ee9.hot-update.js",
-    "/js/app.cc738d41572a10b39ee9.hot-update.js.map": "/js/app.cc738d41572a10b39ee9.hot-update.js.map",
-    "/js/app.e37f37db8fae3af8c593.hot-update.js": "/js/app.e37f37db8fae3af8c593.hot-update.js",
-    "/js/app.e37f37db8fae3af8c593.hot-update.js.map": "/js/app.e37f37db8fae3af8c593.hot-update.js.map",
-    "/js/app.686bd0ddd9b9d36192cb.hot-update.js": "/js/app.686bd0ddd9b9d36192cb.hot-update.js",
-    "/js/app.686bd0ddd9b9d36192cb.hot-update.js.map": "/js/app.686bd0ddd9b9d36192cb.hot-update.js.map",
-    "/js/app.fcd036de02526a0b6cf9.hot-update.js": "/js/app.fcd036de02526a0b6cf9.hot-update.js",
-    "/js/app.fcd036de02526a0b6cf9.hot-update.js.map": "/js/app.fcd036de02526a0b6cf9.hot-update.js.map",
-    "/js/app.cb93f7906c1836fa8a96.hot-update.js": "/js/app.cb93f7906c1836fa8a96.hot-update.js",
-    "/js/app.cb93f7906c1836fa8a96.hot-update.js.map": "/js/app.cb93f7906c1836fa8a96.hot-update.js.map",
-    "/js/app.cacff05cb1f65107b077.hot-update.js": "/js/app.cacff05cb1f65107b077.hot-update.js",
-    "/js/app.cacff05cb1f65107b077.hot-update.js.map": "/js/app.cacff05cb1f65107b077.hot-update.js.map",
-    "/js/app.06847117e456b091d979.hot-update.js": "/js/app.06847117e456b091d979.hot-update.js",
-    "/js/app.06847117e456b091d979.hot-update.js.map": "/js/app.06847117e456b091d979.hot-update.js.map",
-    "/js/app.3ed4c87b6c870de1ad77.hot-update.js": "/js/app.3ed4c87b6c870de1ad77.hot-update.js",
-    "/js/app.3ed4c87b6c870de1ad77.hot-update.js.map": "/js/app.3ed4c87b6c870de1ad77.hot-update.js.map",
-    "/js/app.c43ae2959cb59ee9c128.hot-update.js": "/js/app.c43ae2959cb59ee9c128.hot-update.js",
-    "/js/app.c43ae2959cb59ee9c128.hot-update.js.map": "/js/app.c43ae2959cb59ee9c128.hot-update.js.map",
-    "/js/app.eb1af3b69056ddfcaf58.hot-update.js": "/js/app.eb1af3b69056ddfcaf58.hot-update.js",
-    "/js/app.eb1af3b69056ddfcaf58.hot-update.js.map": "/js/app.eb1af3b69056ddfcaf58.hot-update.js.map",
-    "/js/app.03b0478a3e5a78a36d04.hot-update.js": "/js/app.03b0478a3e5a78a36d04.hot-update.js",
-    "/js/app.03b0478a3e5a78a36d04.hot-update.js.map": "/js/app.03b0478a3e5a78a36d04.hot-update.js.map",
-    "/js/app.b1795977a237fbd4f8bf.hot-update.js": "/js/app.b1795977a237fbd4f8bf.hot-update.js",
-    "/js/app.b1795977a237fbd4f8bf.hot-update.js.map": "/js/app.b1795977a237fbd4f8bf.hot-update.js.map",
-    "/js/app.bea860540a36afeea85e.hot-update.js": "/js/app.bea860540a36afeea85e.hot-update.js",
-    "/js/app.bea860540a36afeea85e.hot-update.js.map": "/js/app.bea860540a36afeea85e.hot-update.js.map",
-    "/js/app.f8181871659ce0599143.hot-update.js": "/js/app.f8181871659ce0599143.hot-update.js",
-    "/js/app.f8181871659ce0599143.hot-update.js.map": "/js/app.f8181871659ce0599143.hot-update.js.map",
-    "/js/app.1943cc662cf887ed1c74.hot-update.js": "/js/app.1943cc662cf887ed1c74.hot-update.js",
-    "/js/app.1943cc662cf887ed1c74.hot-update.js.map": "/js/app.1943cc662cf887ed1c74.hot-update.js.map",
-    "/js/app.3a96ef282bdf2c5cb8e6.hot-update.js": "/js/app.3a96ef282bdf2c5cb8e6.hot-update.js",
-    "/js/app.3a96ef282bdf2c5cb8e6.hot-update.js.map": "/js/app.3a96ef282bdf2c5cb8e6.hot-update.js.map",
-    "/js/app.d4b9abba76411dbdad3a.hot-update.js": "/js/app.d4b9abba76411dbdad3a.hot-update.js",
-    "/js/app.d4b9abba76411dbdad3a.hot-update.js.map": "/js/app.d4b9abba76411dbdad3a.hot-update.js.map",
-    "/js/app.946c19e23350fcd2fee2.hot-update.js": "/js/app.946c19e23350fcd2fee2.hot-update.js",
-    "/js/app.946c19e23350fcd2fee2.hot-update.js.map": "/js/app.946c19e23350fcd2fee2.hot-update.js.map",
-    "/js/app.ec67bad6f243230ca7fa.hot-update.js": "/js/app.ec67bad6f243230ca7fa.hot-update.js",
-    "/js/app.ec67bad6f243230ca7fa.hot-update.js.map": "/js/app.ec67bad6f243230ca7fa.hot-update.js.map",
-    "/js/app.087c615b15fc8404e636.hot-update.js": "/js/app.087c615b15fc8404e636.hot-update.js",
-    "/js/app.087c615b15fc8404e636.hot-update.js.map": "/js/app.087c615b15fc8404e636.hot-update.js.map",
-    "/js/app.b370776d0bb68b0aab52.hot-update.js": "/js/app.b370776d0bb68b0aab52.hot-update.js",
-    "/js/app.b370776d0bb68b0aab52.hot-update.js.map": "/js/app.b370776d0bb68b0aab52.hot-update.js.map",
-    "/js/app.2d87f8c4f2ef7b1702cc.hot-update.js": "/js/app.2d87f8c4f2ef7b1702cc.hot-update.js",
-    "/js/app.2d87f8c4f2ef7b1702cc.hot-update.js.map": "/js/app.2d87f8c4f2ef7b1702cc.hot-update.js.map",
-    "/js/app.54a1fc6339632191a1e4.hot-update.js": "/js/app.54a1fc6339632191a1e4.hot-update.js",
-    "/js/app.54a1fc6339632191a1e4.hot-update.js.map": "/js/app.54a1fc6339632191a1e4.hot-update.js.map",
-    "/js/app.dd203f3ab18025d249f5.hot-update.js": "/js/app.dd203f3ab18025d249f5.hot-update.js",
-    "/js/app.dd203f3ab18025d249f5.hot-update.js.map": "/js/app.dd203f3ab18025d249f5.hot-update.js.map",
-    "/js/app.26162468bcef680bd3e5.hot-update.js": "/js/app.26162468bcef680bd3e5.hot-update.js",
-    "/js/app.26162468bcef680bd3e5.hot-update.js.map": "/js/app.26162468bcef680bd3e5.hot-update.js.map",
-    "/js/app.83faef620dfe9b23d298.hot-update.js": "/js/app.83faef620dfe9b23d298.hot-update.js",
-    "/js/app.83faef620dfe9b23d298.hot-update.js.map": "/js/app.83faef620dfe9b23d298.hot-update.js.map",
-    "/js/app.0f2f6851db9cda9708d9.hot-update.js": "/js/app.0f2f6851db9cda9708d9.hot-update.js",
-    "/js/app.0f2f6851db9cda9708d9.hot-update.js.map": "/js/app.0f2f6851db9cda9708d9.hot-update.js.map",
-    "/js/app.2e9fee0f922ee36c4d98.hot-update.js": "/js/app.2e9fee0f922ee36c4d98.hot-update.js",
-    "/js/app.2e9fee0f922ee36c4d98.hot-update.js.map": "/js/app.2e9fee0f922ee36c4d98.hot-update.js.map",
-    "/js/app.a025ae2b85627c865de6.hot-update.js": "/js/app.a025ae2b85627c865de6.hot-update.js",
-    "/js/app.a025ae2b85627c865de6.hot-update.js.map": "/js/app.a025ae2b85627c865de6.hot-update.js.map",
-    "/js/app.93ff3dc548fbd7149f61.hot-update.js": "/js/app.93ff3dc548fbd7149f61.hot-update.js",
-    "/js/app.93ff3dc548fbd7149f61.hot-update.js.map": "/js/app.93ff3dc548fbd7149f61.hot-update.js.map",
-    "/js/app.87c4f80b57f7aea434f2.hot-update.js": "/js/app.87c4f80b57f7aea434f2.hot-update.js",
-    "/js/app.87c4f80b57f7aea434f2.hot-update.js.map": "/js/app.87c4f80b57f7aea434f2.hot-update.js.map"
+    "/css/app.css.map": "/css/app.css.map"
 }
